--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-three/fiber": "^9.4.0",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lenis": "^1.3.14",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
