--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type":"module",
   "name": "ecotrack",
   "version": "0.1.0",
   "private": true,
@@ -30,5 +31,21 @@
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "seed.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KNIHAL/EcoTrack.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KNIHAL/EcoTrack/issues"
+  },
+  "homepage": "https://github.com/KNIHAL/EcoTrack#readme"
 }
